2009-01-04  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: Fixed bug in scene count in extension block.
	* coders/fits.c: Supported logging.

2009-01-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Produce sprintf scaling strings for
	platform-specific types.

	* magick/magick_types.h.in: Include sprintf scaling strings for
	platform-specific types.

	* magick/constitute.c (WriteImage): If output stream is not
	seekable and coder needs to use seek, then divert output to
	temporary file, and then send file to stream.

	* magick/blob.c (GetBlobSize): Simplify implementation.
	(OpenBlob): Don't attempt to test header magic on file we are
	writing.  Silly benign bug in obtuse code.

	* coders/tiff.c (ReadTIFFImage,WriteTIFFImage): Strip out use of
	temporary file.  Use TIFFClientOpen() for writing.

2008-12-28  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: Ability to read extension blocks.
	* coders/fits.c: Fixed MaxTextExtent limitation of blocks.

2008-12-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/OpenMP.rst: Add results for Window Vista 64-bit / AMD Phenom
	X4 9550.
	* VisualMagick/installer/inc/body.isx: Revert yesterday's change
	regarding the placement of config files.  Place the config files
	in a 'config' subdirectory just as before.

2008-12-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/installer/inc/body.isx: They say that when in Rome
	you should do as the Roman's do.  Based on this philosophy, all of
	the coder and filter DLLs are now installed to the same directory
	as the executables and DLLs which depend on them.  This eases
	operation under Windows Vista.

2008-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c: First pass at supporting large file access under
	Windows.

2008-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (InitializeMagickResources): Improve resource