@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020090103"
+#define public MagickPackageVersionAddendum ".020090105"
 #define public MagickPackageReleaseDate "unreleased"
